# prefetch-forensic

./: Cargo.toml  README.md  deny.toml  mkdocs.yml  release-plz.toml  renovate.json
.github/workflows/: ci.yml  release-plz.yml
core/: CHANGELOG.md  Cargo.toml
core/examples/: pf_dump.rs
core/src/: lib.rs
docs/: PRD.md  index.md  privacy.md  terms.md  validation.md
docs/decisions/: 0001-core-forensic-split.md  0002-clean-room-xpress-huffman-crate.md  0003-forbid-unsafe-panic-free-readers.md  0004-scca-v30-v31-scope-and-run-count-shift.md  0005-knowledge-and-report-from-forensicnomicon.md  0006-high-precision-evidence-first-findings.md  0007-packaging-naming-msrv-license.md
forensic/: Cargo.toml
forensic/src/: lib.rs
scripts/: validate_oracles.py
supply-chain/: config.toml
tests/data/: README.md
