[workspace]
resolver = "2"
members = ["core", "forensic"]

# Single source of truth for fields shared by every member (DRY): bump MSRV /
# license / repository here once; members inherit via `field.workspace = true`.
# `version` is intentionally NOT hoisted — core (0.1.0) and forensic (0.2.0) are
# versioned independently, so each keeps its own inline.
[workspace.package]
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"
authors = ["Albert Hui"]
repository = "https://github.com/SecurityRonin/prefetch-forensic"
readme = "README.md"

# Single source of truth for dependency versions (DRY): declare each once;
# members write `dep.workspace = true`. The inter-crate `prefetch-core` version
# lives here too, so a bump touches one line instead of every member + dev-dep.
[workspace.dependencies]
prefetch-core = { path = "core", version = "0.1.0" }
xpress-huffman = "0.1"
forensicnomicon = "1"
# Render prefetch's raw FILETIME last-run times as readable UTC in the prefetch4n6 CLI.
jiff = "0.2"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all                   = { level = "warn", priority = -1 }
pedantic              = { level = "warn", priority = -1 }
correctness           = { level = "deny",  priority = -1 }
suspicious            = { level = "deny",  priority = -1 }
unwrap_used           = { level = "deny",  priority = 0  }
expect_used           = { level = "deny",  priority = 0  }
module_name_repetitions = { level = "allow", priority = 1 }
must_use_candidate    = { level = "allow", priority = 1 }
missing_errors_doc    = { level = "allow", priority = 1 }
missing_panics_doc    = { level = "allow", priority = 1 }
cast_possible_truncation = { level = "allow", priority = 1 }
cast_possible_wrap    = { level = "allow", priority = 1 }
cast_sign_loss        = { level = "allow", priority = 1 }
cast_precision_loss   = { level = "allow", priority = 1 }
too_many_lines        = { level = "allow", priority = 1 }
