[package]
name = "prefetch-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "Pure-Rust read-only Windows Prefetch (.pf) reader — MAM/Xpress-Huffman decompression + SCCA v30/31 (run count, last-8 run times, volume info, loaded files)."
license = "Apache-2.0"
authors = ["Albert Hui"]
keywords = ["forensics", "prefetch", "windows", "dfir", "execution"]
categories = ["parser-implementations"]
repository = "https://github.com/SecurityRonin/prefetch-forensic"
readme = "../README.md"
exclude = ["tests/data/", "fuzz/"]

[dependencies]
# The MAM/Xpress-Huffman codec lives in its own reusable crate (also used for
# hiberfil.sys / SMB3 / registry-hive decompression across the fleet). Pinned to
# the SecurityRonin repo until it is published to crates.io (then: `= "0.1"`).
xpress-huffman = { version = "0.1", git = "https://github.com/SecurityRonin/xpress-huffman", rev = "a4087f36103cb20e00a24a0eef0b54923d7b28b9" }

[lints]
workspace = true
