[package]
name = "prefetch-core"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
description = "Pure-Rust read-only Windows Prefetch (.pf) reader — MAM/Xpress-Huffman decompression + SCCA v30/31 (run count, last-8 run times, volume info, loaded files)."
license.workspace = true
authors.workspace = true
keywords = ["forensics", "prefetch", "windows", "dfir", "execution"]
categories = ["parser-implementations"]
repository.workspace = true
readme.workspace = true
exclude = ["tests/data/", "fuzz/"]

[dependencies]
# The MAM/Xpress-Huffman codec lives in its own reusable crate (also used for
# hiberfil.sys / SMB3 / registry-hive decompression across the fleet).
xpress-huffman = { workspace = true }

[lints]
workspace = true
