[package]
name = "prefetch-forensic"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
description = "Windows Prefetch forensic analyzer — execution evidence (run count, last-run times, loaded files) plus graded masquerade / suspicious-location findings, over prefetch-core."
license.workspace = true
authors.workspace = true
keywords = ["forensics", "prefetch", "windows", "dfir", "execution"]
categories = ["parser-implementations"]
repository.workspace = true
readme.workspace = true
exclude = ["tests/data/", "fuzz/"]

[dependencies]
prefetch-core = { workspace = true }
forensicnomicon = { workspace = true }

[lints]
workspace = true
